--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bible Map App</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="GeoScript - Interactive Bible and Historical Map Application">
+    <meta name="theme-color" content="#3b82f6">
+    <title>GeoScript - Interactive Biblical Geography</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+          crossorigin=""/>
 </head>
 <body>
     <div id="root"></div>
-    <script src="bundle.js"></script>
 </body>
 </html>
